--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -9,8 +9,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "</h1>  \n",
     "<h1 align=\"center\">\n",
     "<img src=\"https://github.com/fun-zoological-computing/LearningGitGitHub/blob/master/wsu_branding.jpg\" width=\"750\" height=\"500\" />\n",
     "</h1>  \n",
@@ -22,31 +20,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "50e165bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/user/git/MoNEAlgorithms\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pwd"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f473f60f",
    "metadata": {},
    "source": [
-    "COMP 6001 Neuromorphic Algorithms and Computation\n",
+    "# COMP 6001 Neuromorphic Algorithms and Computation\n",
     "\n",
-    "Assignment 2 – Event Generation (30%)\n",
+    "## Assignment 2 – Event Generation (30%)\n",
     "\n"
    ]
   },
@@ -69,30 +49,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d84f8f1",
+   "cell_type": "markdown",
+   "id": "f26913bc",
    "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
     "\n",
     "In the provided dataset is a greyscale video sequence. The aim of this task is to produce an event stream (x, y, p, t), of the recording.\n",
     "\n",
-    "Q1.  Build an algorithm to convert the video sequence to an event stream with a reasonable SNR and high temporal resolution  \n",
+    "# Q1.\n",
+    "Build an algorithm to convert the video sequence to an event stream with a reasonable SNR and high temporal resolution  \n",
     "\n",
-    "QX. (15%) Evaluate and briefly justify your algorithms\n",
+    "# QX. \n",
+    "(15%) Evaluate and briefly justify your algorithms\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dea81dd9",
+   "metadata": {},
+   "source": [
     "\n",
-    "Justification of algorithm choice (7.5/15)\n",
+    "# Marking\n",
     "\n",
-    "Complexity (2.5/15)\n",
+    "* Justification of algorithm choice (7.5/15)\n",
     "\n",
-    "Scalability (2.5/15)\n",
+    "* Complexity (2.5/15)\n",
     "\n",
-    "Similarity to solutions within literature (2.5/15)\n",
+    "* Scalability (2.5/15)\n",
     "\n",
-    "Profiling to identify bottlenecks (2.5/15)\n",
+    "* Similarity to solutions within literature (2.5/15)\n",
     "\n",
+    "* Profiling to identify bottlenecks (2.5/15)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d05c5f3",
+   "metadata": {},
+   "source": [
     "Submission requirements:\n",
     "\n",
     "All code must be written using Jupyter Notebooks, or Matlab Live Script  \n",
@@ -101,6 +97,30 @@
     "\n",
     "Submission is via GIT Classroom, and Turnitin. Copy the code as plain text to a document and submit.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4283e360",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e33035d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bab28aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
