--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "\n",
     "<h1 align=\"center\">\n",
-    "<img src=\"https://github.com/fun-zoological-computing/LearningGitGitHub/blob/master/wsu_branding.jpg\" width=\"750\" height=\"500\" />\n",
+    "<img src=\"https://github.com/fun-zoological-computing/LearningGitGitHub/blob/master/wsu_branding.jpg?raw=1\" width=\"750\" height=\"500\" />\n",
     "</h1>  \n",
     "\n",
     "<!--Russell Jarvis, Postdoctoral researcher [email](r.jarvis@westernsyndney.edu.au)\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f6de847",
+   "id": "041ceb15",
    "metadata": {},
    "source": [
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81b71d95",
+   "id": "355591ad",
    "metadata": {},
    "source": [
     "\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "428229e3",
+   "id": "48c203be",
    "metadata": {},
    "source": [
     "Submission requirements:\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41137c0e",
+   "id": "d4845611",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69d5ede0",
+   "id": "7aa0dde0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "663e1778",
+   "id": "ae8a4eae",
    "metadata": {},
    "outputs": [],
    "source": []
