--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "\n",
     "<h1 align=\"center\">\n",
-    "<img src=\"https://github.com/fun-zoological-computing/LearningGitGitHub/blob/master/images/wsu_branding.jpg" width=\"750\" height=\"500\" />\n",
+    "<img src=\"https://github.com/fun-zoological-computing/LearningGitGitHub/blob/master/images/wsu_branding.jpg\" width=\"750\" height=\"500\" />\n",
     "</h1>  \n",
     "\n",
     "<!--Russell Jarvis, Postdoctoral researcher [email](r.jarvis@westernsyndney.edu.au)\n",
