fixed lecture figure

--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "\n",
     "<h1 align=\"center\">\n",
-    "<img src=\"https://github.com/fun-zoological-computing/LearningGitGitHub/blob/master/wsu_branding.jpg?raw=1\" width=\"750\" height=\"500\" />\n",
+    "<img src=\"images/wsu_branding.jpg?raw=1\" width=\"750\" height=\"500\" />\n",
     "</h1>  \n",
     "\n",
     "<!--Russell Jarvis, Postdoctoral researcher [email](r.jarvis@westernsyndney.edu.au)\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "934ef57f",
+   "id": "eb114bb2",
    "metadata": {},
    "source": [
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c57cdbec",
+   "id": "d237e764",
    "metadata": {},
    "source": [
     "\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8a5693c",
+   "id": "b68df57d",
    "metadata": {},
    "source": [
     "Submission requirements:\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b3a1d07",
+   "id": "32f92291",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd5bf114",
+   "id": "3bb8803e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b51f79db",
+   "id": "9d441901",
    "metadata": {},
    "outputs": [],
    "source": []
