--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "\n",
     "<h1 align=\"center\">\n",
-    "![](/images/wsu_branding.jpg)",
-    "<img src=\"/images/wsu_branding.jpg?raw=1\" width=\"750\" height=\"500\" />\n",
+    "![](images/wsu_branding.jpg)",
+    "<img src=\"images/wsu_branding.jpg?raw=1\" width=\"750\" height=\"500\" />\n",
     "</h1>  \n",
     "\n",
     "<!--Russell Jarvis, Postdoctoral researcher [email](r.jarvis@westernsyndney.edu.au)\n",
