--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "\n",
     "<h1 align=\"center\">\n",
-    "![](/images/wsu_branding.jpg) \n",
+    "![](images/wsu_branding.jpg) \n",
     "<img src=\"images/wsu_branding.jpg?raw=1\" width=\"750\" height=\"500\" />\n",
     "</h1>  \n",
     "\n",
