update code for teaching material

--- a/Week3.ipynb
+++ b/Week3.ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "93a9b418",
+   "metadata": {},
+   "source": [
+    "\n",
+    "[](images/wsu_branding.jpg) \n",
+    "<h1 align=\"center\">\n",
+    "<img src=\"images/wsu_branding.jpg?raw=1\" width=\"750\" height=\"500\" />\n",
+    "</h1>  \n",
+    "\n",
+    "<!--Russell Jarvis, Postdoctoral researcher [email](r.jarvis@westernsyndney.edu.au)\n",
+    "\n",
+    "-->\n",
+    "The code for this material lives [here](https://github.com/fun-zoological-computing/LearningGitGitHub/blob/master/Week2.ipynb), feel free to hack it.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# COMP 6001 Neuromorphic Algorithms and Computation \n",
@@ -15,7 +30,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "325bb809",
    "metadata": {},
    "source": [
     "* Elitism versus NSGA \n",
@@ -32,55 +46,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42f07cf0",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Picture of bitstring"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ca3b1874",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -treamlit (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -orch (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -eaborn (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -treamlit (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -orch (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -eaborn (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "Requirement already satisfied: deap in /home/user/miniconda3/lib/python3.9/site-packages (1.3.1)\n",
-      "Requirement already satisfied: numpy in /home/user/miniconda3/lib/python3.9/site-packages (from deap) (1.20.3)\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -treamlit (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -orch (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -eaborn (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -treamlit (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -orch (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -eaborn (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -treamlit (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -orch (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -eaborn (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -treamlit (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -orch (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -eaborn (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -cipy (/home/user/miniconda3/lib/python3.9/site-packages)\u001b[0m\n"
+      "Requirement already satisfied: deap in /home/user/anaconda3/lib/python3.7/site-packages (1.3.0)\r\n",
+      "Requirement already satisfied: numpy in /home/user/anaconda3/lib/python3.7/site-packages (from deap) (1.21.5)\r\n"
      ]
     }
    ],
@@ -92,7 +74,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dc41862",
    "metadata": {},
    "source": [
     "# In Genetic Algorithms an \"error function\" is similar to a loss function in regular DEAP learning."
@@ -101,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "87d895cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +96,27 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b852246d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function deap.benchmarks.zdt1(individual)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from deap import benchmarks\n",
+    "benchmarks.zdt1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,22 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e3d991f1",
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'neuronunit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# pylint: disable=R0912, R0914\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mneuronunit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptimization\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m optimization_management\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlogging\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'neuronunit'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import random\n",
@@ -268,8 +255,6 @@
     "import deap.algorithms\n",
     "import deap.tools\n",
     "\n",
-    "from . import algorithms\n",
-    "from . import tools\n",
     "\n",
     "class WeightedSumFitness(deap.base.Fitness):\n",
     "\n",
@@ -322,13 +307,13 @@
     "        super(WSListIndividual, self).__init__(*args, **kwargs)\n",
     "\n",
     "\n",
-    "class DEAPOptimisation(bluepyopt.optimisations.Optimisation):\n",
+    "class DEAPOptimisation():\n",
     "\n",
     "    \"\"\"DEAP Optimisation class\"\"\"\n",
     "\n",
     "    def get_trans_list(self,param_dict):\n",
     "        trans_list = []\n",
-    "        for i,k in enumerate(list(param_dict.keys())):\n",
+    "        for i,k in enumerate([param_dict.keys()]):\n",
     "            trans_list.append(k)\n",
     "        return trans_list\n",
     "\n",
@@ -374,13 +359,8 @@
     "\n",
     "\n",
     "    def set_evaluate(self):\n",
-    "        if self.benchmark == True:\n",
-    "            self.toolbox.register(\"evaluate\", benchmarks.zdt1)\n",
-    "        else:\n",
-    "            #from neuronunit.optimization.optimization_management import OptMan\n",
-    "            #optimization_management = OptMan()\n",
-    "            self.toolbox.register(\"evaluate\", optimization_management.evaluate)\n",
-    "\n",
+    "        self.toolbox.register(\"evaluate\", benchmarks.zdt1)\n",
+    "        \n",
     "    def setup_deap(self):\n",
     "        \"\"\"Set up optimisation\"\"\"\n",
     "\n",
@@ -523,22 +503,12 @@
     "\n",
     "        td = self.td\n",
     "        return pop, hof, log, history, td, gen_vs_hof\n",
-    "\n",
-    "\n",
-    "class IBEADEAPOptimisation(DEAPOptimisation):\n",
-    "\n",
-    "    \"\"\"IBEA DEAP class\"\"\"\n",
-    "\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        \"\"\"Constructor\"\"\"\n",
-    "\n",
-    "        super(IBEADEAPOptimisation, self).__init__(*args, **kwargs)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7427fdd3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -546,7 +516,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2cac7f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -572,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
