--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -58,17 +58,15 @@
     "\n",
     "* Glob \n",
     "\n",
-    "* BASH or `os.system` \n",
-    "\n",
-    "* Terminal \n",
+    "* BASH (bourne again shell) `os.system` ie the Terminal \n",
     "\n",
     "* Github actions. \n",
     "\n",
-    "* Anti patterns (how not to use git) \n",
+    "* Design Patterns Anti patterns (how not to use git) \n",
     "\n",
-    "* Functions, classes (how to write not repeat yourself) \n",
+    "* Functions, Classes (how to write not repeat yourself) \n",
     "\n",
-    "* Inheritence, functions. "
+    "* Inheritence and the self principle."
    ]
   },
   {
@@ -82,13 +80,24 @@
    "source": [
     "# Python Philosophy\n",
     "\n",
-    "Its core philosophy is summarized in the document The Zen of Python (PEP 20), which includes aphorisms such as:[69]\n",
+    "Its core philosophy is summarized in the document The Zen of Python (PEP 20):[69]\n",
     "\n",
     "\n",
     "\n",
     "### Beautiful is better than ugly.\n",
     "Indentation and not braces.\n",
     "\n",
+    "\n",
+    "### Explicit is better than implicit.\n",
+    "Parameter types can now be defined.\n",
+    "### Simple is better than complex.\n",
+    "\n",
+    "### Complex is better than complicated.\n",
+    "Readability counts.\n",
+    "\n",
+    "Rather than building all of its functionality into its core, Python was designed to be highly extensible via modules. This compact modularity has made it particularly popular as a means of adding programmable interfaces to existing applications. Van Rossum's vision of a small core language with a large standard library and easily extensible interpreter stemmed from his frustrations with ABC, which espoused the opposite approach.[40]\n",
+    "\n",
+    "Patterns and antipatterns\n",
     "```\n",
     "a = 1\n",
     "a = True\n",
@@ -110,17 +119,7 @@
     "\n",
     "if a!=True or a==False:\n",
     "    print('claus not entered')\n",
-    "```\n",
-    "\n",
-    "\n",
-    "### Explicit is better than implicit.\n",
-    "Parameter types can now be defined.\n",
-    "### Simple is better than complex.\n",
-    "\n",
-    "### Complex is better than complicated.\n",
-    "Readability counts.\n",
-    "\n",
-    "Rather than building all of its functionality into its core, Python was designed to be highly extensible via modules. This compact modularity has made it particularly popular as a means of adding programmable interfaces to existing applications. Van Rossum's vision of a small core language with a large standard library and easily extensible interpreter stemmed from his frustrations with ABC, which espoused the opposite approach.[40]"
+    "```\n"
    ]
   },
   {
@@ -265,9 +264,9 @@
     "\n",
     "### Why is this useful?\n",
     "\n",
-    "* Signals to other developers how easy it would be to get your package to work as expected.\n",
+    "* CI signals to other developers how easy it would be to get your package to work as expected.\n",
     "\n",
-    "* Signals to your direct collaborators if your latest code feature is compatible with their code.\n",
+    "* CI signals to your direct collaborators if your latest code feature is compatible with their code.\n",
     "\n",
     "* Actually offloads a significant amount of computation from your laptop (30 minute jobs can run in the cloud).\n",
     "\n"
