--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -11,6 +11,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Submission requirements:\n",
+    "\n",
+    "All code must be written using Jupyter Notebooks, or Matlab Live Script\n",
+    "\n",
+    "Written components will need be written in a markup or similar format within the Notebook/Live Script\n",
+    "\n",
+    "Submission is via GIT Classroom, and Turnitin. Copy the code as plain text to a document and submit."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -95,31 +108,7 @@
     "### Complex is better than complicated.\n",
     "Readability counts.\n",
     "\n",
-    "Rather than building all of its functionality into its core, Python was designed to be highly extensible via modules. This compact modularity has made it particularly popular as a means of adding programmable interfaces to existing applications. Van Rossum's vision of a small core language with a large standard library and easily extensible interpreter stemmed from his frustrations with ABC, which espoused the opposite approach.[40]\n",
-    "\n",
-    "Patterns and antipatterns\n",
-    "```\n",
-    "a = 1\n",
-    "a = True\n",
-    "a = 'almost anything except...'\n",
-    "if a:\n",
-    "   print('claus entered')\n",
-    "\n",
-    "if a==True:\n",
-    "    print('claus entered')\n",
-    "```\n",
-    "\n",
-    "\n",
-    "```\n",
-    "a = None\n",
-    "a = 0\n",
-    "\n",
-    "if not a:\n",
-    "   print('claus not entered')\n",
-    "\n",
-    "if a!=True or a==False:\n",
-    "    print('claus not entered')\n",
-    "```\n"
+    "Rather than building all of its functionality into its core, Python was designed to be highly extensible via modules. This compact modularity has made it particularly popular as a means of adding programmable interfaces to existing applications. Van Rossum's vision of a small core language with a large standard library and easily extensible interpreter stemmed from his frustrations with ABC, which espoused the opposite approach.[40]\n"
    ]
   },
   {
@@ -181,7 +170,8 @@
     "    print('claus not entered')\n",
     "\n",
     "if a!=True or a==False:\n",
-    "    print('claus not entered')\n"
+    "    print('claus not entered')\n",
+    "\n"
    ]
   },
   {
@@ -218,14 +208,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "# Patterns and antipatterns\n",
+    "* Not using get() to return a default value from a dict\n",
+    "\n",
     "# Patterns vs Anti-patterns\n",
-    "Anti-patterns are certain patterns in software development that are considered bad programming practices.\n",
+    "* Anti-patterns are certain patterns in software development that are considered bad programming practices.\n",
     "\n",
-    "As opposed to design patterns which are common approaches to common problems that have been formalized and are generally considered a good development practice, anti-patterns are the opposite and are undesirable.\n",
+    "* As opposed to design patterns which are common approaches to common problems that have been formalized and are generally considered a good development practice, anti-patterns are the opposite and are undesirable.\n",
     "\n",
-    "Anti-patterns make code difficult to read, hard to maintain, slow, over-engineered, unstable, prone to errors and with potential security issues.\n",
+    "* Anti-patterns make code difficult to read, hard to maintain, slow, over-engineered, unstable, prone to errors and with potential security issues.\n",
     "\n",
-    "Introducing anti-patterns happens for many reasons:"
+    "* Introducing anti-patterns happens for many reasons:"
    ]
   },
   {
