--- a/Week8.ipynb
+++ b/Week8.ipynb
@@ -14,14 +14,19 @@
    "metadata": {},
    "source": [
     "## Week 8 - Tutorial 6 – ML and Feature Extraction \n",
-    "### Q1. \n",
     "\n",
-    "* Many popular ML methods used for feature extraction in neuromorphic vision data involve networks with similarities to \n",
+    "## Context\n",
+    "\n",
+    "* Many methods used for feature extraction in neuromorphic vision data involve networks with similarities to \n",
     "* Self-Organising Maps.\n",
     "* In particular algorithms such as FEAST and HOTS. \n",
+    "the Feature Extraction with Adaptive Selection Thresholds (FEAST) algorithm\n",
+    "The Hierarchy of Event-based Time Surface (HOTS) algorithm [31] \n",
+    "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7146588/\n",
     "* An event context is a neighbourhood surrounding the most recent event. \n",
     "* At their core, these feature extraction algorithms work to cluster event contexts. When an event is received, the neuron which the  incoming event context most closely resembles ‘spikes’. In a winner-take-all style approach, the spiking neuron weight is  updated/mixed with the event context (as a function of the learning rate) to gradually learn the common features. \n",
     "\n",
+    "### Q1. \n",
     "**Instructions** Implement a basic neuron-based feature extraction algorithm with this approach. The algorithm should: \n",
     "\n",
     " \n"
@@ -32,9 +37,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "* Initialise 9 random 11x11 weights \n",
-    "* Hint numpy.random.rand\n",
-    "* Create a time surface of the incoming event stream \n",
+    "* Initialise 9 random 11x11 weights (Hint numpy.random.rand)\n",
+    "### Create a time surface of the incoming event stream \n",
     "* Extract the event context from the time surface (with the same dimensions as the weights) \n",
     "* Check which neuron is the most similar (cosine distance) \n",
     "* Update the neuron weight \n",
